--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@main
 
+    - name: Extract repo name
+      run: |
+        REPO_NAME=$(echo "${{ github.repository }}" | awk -F '/' '{print $2}')
+        echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
@@ -27,7 +32,7 @@ jobs:
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: ${{ github.repository }}
+        name: ${{ env.REPO_NAME }}
         path: ./app
 
     - name: Trigger CD
